third_party/move/move-compiler-v2/tests/checking/typing/type_variable_join_threaded_unpack_assign_invalid.exp

Diagnostics:
error: cannot return `integer` from a function with result type `bool`
   ┌─ tests/checking/typing/type_variable_join_threaded_unpack_assign_invalid.move:36:9
   │
36 │         f1
   │         ^^

error: type `R` is missing required ability `drop`
   ┌─ tests/checking/typing/type_variable_join_threaded_unpack_assign_invalid.move:44:47
   │
23 │     struct Box<T> has drop { f1: T, f2: T }
   │                - declaration of type parameter `T`
   ·
44 │         Container::put(&mut v, Box { f1: R{}, f2 });
   │                                               ^^
   │
   = required by instantiating type parameter `T` of struct `Box`
